# XL_Translator

./: .cursorrules  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  README_首次使用.txt  agent.md  app.py  app_meta.py  config.py  constraints-release-py311.txt  index.html  package-lock.json  package.json  quality_gate.ps1  requirements-build.txt  requirements.txt  settings.py  vite.config.ts  分发应用.bat  启动原生应用.command  启动应用.bat  启动应用.command
.streamlit/: config.toml
agent/: README.md  SELF_TESTING_PLAYBOOK.md
api/: __init__.py  app.py  launcher.py  task_manager.py
core/: api_concurrency_control.py  api_config_check.py  api_health.py  api_scheduler.py  app_paths.py  bilingual_writer.py  connectivity_check.py  data_migration.py  diagnostics.py  engine_dispatcher.py  excel_automation.py  excel_coverage.py  file_scanner.py  headless_pdf_translate.py  headless_translate.py  headless_word_translate.py  image_detector.py  image_generation.py  language_preflight.py  language_registry.py  maintenance.py  mixed_language.py  model_api_identity.py  model_catalog.py  model_config.py  model_roles.py  model_throughput.py  pdf_image_translation.py  pdf_review.py  task_history.py  task_logger.py  task_queue.py  task_resources.py  task_runner.py  tm_cleaner.py  tm_cleaning_task_runner.py  tm_manager.py  tm_text.py  translation_coverage.py  translation_filter.py  (+8 more)
docs/: CHANGELOG.md  DB_REPAIR_GUIDE.md  KNOWN_ISSUES.md  (+8 more)
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+211 files in other folders)
