[package]
name = "xl-translator"
version = "5.0.0"
description = "XL Translator desktop shell"
authors = ["KlaraGraff"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "xl_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
